# rustphish

./: .gitignore  321  Cargo.toml  Makefile.toml  README.md  README_EN.md  client_config.toml  config.toml  pyru_output.txt  server_config.toml  template.html
.github/workflows/: release.yml
appendix/: Cargo.toml
appendix/src/: main.rs
client/: Cargo.toml
client/src/: db.rs  main.rs  patch_tool.rs  qr.rs  smtp.rs
client/src/malware/: lnk.rs  mod.rs  patch_tool.rs  zip.rs
common/: Cargo.toml
common/src/: structs.rs
frontend/: index.html  success.html
script/: build_lnk.ps1
server/: Cargo.toml
server/src/: main.rs
server/src/db/: mod.rs
shared/: Cargo.toml
shared/src/: structs.rs  utils.rs
