[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
lettre = "0.11"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.15"
sled = "0.34.7"
bincode = "1.3"
common = { path = "../common" }
colored = "1.9"
zerocopy = "0.6.0"
clap = "4.5.26"
rpassword = "7.3"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.2"
tokio = { version = "1.0", features = ["full", "test-util"] }