[package]
name = "client"
version = "0.1.0"
edition = "2024"

# 基础依赖，这些依赖在任何情况下都需要
[dependencies]
serde = { version = "1.0", features = ["derive"] }
colored = "1.9"
clap = "4.5.26"
common = { path = "../common" }

# 数据库功能所需依赖
sled = { version = "0.34.7", optional = true }
bincode = { version = "1.3", optional = true }
zerocopy = { version = "0.6.0", optional = true }
rand = { version = "0.8", optional = true }

# 邮件功能所需依赖
lettre = { version = "0.11", optional = true }
toml = { version = "0.8", optional = true }
rpassword = { version = "7.3", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

# 开发环境依赖
[dev-dependencies]
tempfile = "3.2"
tokio = { version = "1.0", features = ["full", "test-util"] }

# 功能特性定义
[features]
default = []
db = ["dep:sled", "dep:bincode", "dep:zerocopy", "dep:rand"]
mail = ["db", "dep:lettre", "dep:toml", "dep:rpassword", "dep:tokio"]
