[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.7", features = ["rustls-0_23"]}
serde_json = "1.0"
# once_cell = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
# tokio-rustls = { version = "0.25.0"}
# pki-types = { package = "rustls-pki-types", version = "1" }
webpki-roots = "0.26"
# rustls-pemfile = "2"
zerocopy = "0.6.0"
byteorder = "1.4.3"
bytes = "1.0"
actix-rt = { version = "2.1", default-features = false }
actix-cors = "0.7"
actix-files = "0.6"
actix-http = "3.5"
actix-identity = "0.7"
actix-multipart = "0.7"
actix-protobuf = "0.10"
actix-web-actors = "4.1"
actix-web-lab = "0.20"
actix-ws = "0.2.5"
env_logger = "0.11"
log = "0.4"
sled = "0.34.7"
# rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "std"]}
chrono = "0.4.39"
common = { path = "../common" }


[features]
tls = []

